[gd_scene load_steps=5 format=3 uid="uid://bwr4mfv4fcu4a"]

[ext_resource type="Script" path="res://levels/Level_01.gd" id="1_4qlt7"]
[ext_resource type="Script" path="res://levels/MobSpawner.gd" id="2_v612x"]

[sub_resource type="Curve2D" id="Curve2D_asmhc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0ct0"]
size = Vector2(53, 380.5)

[node name="Level_01" type="CanvasLayer"]
script = ExtResource("1_4qlt7")

[node name="MobSpawnTimer" type="Timer" parent="."]

[node name="MobSpawner" type="Node2D" parent="."]
script = ExtResource("2_v612x")

[node name="MobPath" type="Path2D" parent="MobSpawner"]
scale = Vector2(1, 1.01227)
curve = SubResource("Curve2D_asmhc")

[node name="MobSpawnPoint" type="PathFollow2D" parent="MobSpawner/MobPath"]
position = Vector2(0, 782.4)
rotation = -1.5708

[node name="Detector" type="Area2D" parent="."]
position = Vector2(1486, 188)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("RectangleShape2D_g0ct0")

[node name="Marker2D" type="Marker2D" parent="Detector"]
modulate = Color(1, 1, 1, 0.356863)
position = Vector2(-191, 0)

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
